--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
    <link rel="stylesheet" href="style.css"> <title>Performance-15|WB-PERFORMAMCE_15|Sayma-abdul-kader|Icons</title>
 </head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <body>
     <i class="bi bi-alarm-fill"></i>
+    <br><br>
     <i class="bi bi-bar-chart-steps"></i>
+        <br><br>
     <h1>Hello</h1>
     <h2>Hi!</h2>
     <h3>Welcome there,</h3>
