--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <body>
-    <i class="bi bi-alarm-fill"></i>
+    <i class="bi bi-wordpress"></i>
     <br><br>
     <i class="bi bi-bar-chart-steps"></i>
         <br><br>
